@startuml
'https://plantuml.com/class-diagram



class AbstractFlyingObject{
        # locationX:int
        # locationY:int
        # speedX:int
        # speedY:int
        + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
        + Forward():void
        + valish():void
    }

class AbstractAircraft{
        # axHp:int
        # hp:int
        + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
        + decreaseHp(int decrease):void
        + getHp():int
        + {abstract} shoot():List<BaseBullet>
    }

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    - instance:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + getInstance():HeroAircraft
}

HeroAircraft --> HeroAircraft



AbstractAircraft <|-- AbstractFlyingObject
HeroAircraft <|-- AbstractAircraft

@enduml